Make firewall and firewall resources location based
Making firewall and firewall rule resources location based
Location based resources can be managed by either their id
or name, with this PR adding the name support.
