# internal/provider/firewall_resource.go
@@ -62,15 +62,13 @@ func (r *firewallResource) Create(ctx context.Context, req resource.CreateReques
 	if resp.Diagnostics.HasError() {
 		return
 	}
-	body := ubicloud_client.CreateFirewallJSONRequestBody{
-		Name: state.Name.ValueString(),
-	}
+	body := ubicloud_client.CreateFirewallJSONRequestBody{}
 	if state.Description.ValueString() != "" {
 		body.Description = state.Description.ValueStringPointer()
 	}
 
 	tflog.Debug(ctx, fmt.Sprintf("Creating firewall: project_id=%s", state.ProjectId.ValueString()))
-	firewallResp, err := r.uc.client.CreateFirewallWithResponse(ctx, state.ProjectId.ValueString(), body)
+	firewallResp, err := r.uc.client.CreateFirewallWithResponse(ctx, state.ProjectId.ValueString(), state.Location.ValueString(), state.Name.ValueString(), body)
 	if err != nil {
 		resp.Diagnostics.AddError(
 			fmt.Sprintf("Error creating firewall: project_id=%s", state.ProjectId.ValueString()),
@@ -110,7 +108,7 @@ func (r *firewallResource) Read(ctx context.Context, req resource.ReadRequest, r
 	}
 
 	tflog.Debug(ctx, fmt.Sprintf("Reading firewall: %s", firewallResourceLogIdentifier(&state)))
-	firewallResp, err := r.uc.client.GetFirewallDetailsWithResponse(ctx, state.ProjectId.ValueString(), state.Id.ValueString())
+	firewallResp, err := r.uc.client.GetFirewallDetailsWithResponse(ctx, state.ProjectId.ValueString(), state.Location.ValueString(), state.Name.ValueString())
 	if err != nil {
 		resp.Diagnostics.AddError(
 			fmt.Sprintf("Error reading firewall: %s", firewallResourceLogIdentifier(&state)),
@@ -126,8 +124,8 @@ func (r *firewallResource) Read(ctx context.Context, req resource.ReadRequest, r
 		return
 	}
 
-	assignStr(firewallResp.JSON200.Id, &state.Id)
 	assignStr(firewallResp.JSON200.Name, &state.Name)
+	assignStr(firewallResp.JSON200.Location, &state.Location)
 	assignStr(firewallResp.JSON200.Description, &state.Description)
 
 	firewallRulesListValue, fwRulesDiags := GetFirewallRulesState(ctx, firewallResp.JSON200.FirewallRules)
@@ -162,7 +160,7 @@ func (r *firewallResource) Delete(ctx context.Context, req resource.DeleteReques
 	}
 
 	tflog.Debug(ctx, fmt.Sprintf("Deleting firewall: %s", firewallResourceLogIdentifier(&state)))
-	firewallResp, err := r.uc.client.DeleteFirewallWithResponse(ctx, state.ProjectId.ValueString(), state.Id.ValueString())
+	firewallResp, err := r.uc.client.DeleteFirewallWithResponse(ctx, state.ProjectId.ValueString(), state.Location.ValueString(), state.Name.ValueString())
 	if err != nil {
 		resp.Diagnostics.AddError(
 			fmt.Sprintf("Error deleting firewall: %s", firewallResourceLogIdentifier(&state)),
@@ -182,18 +180,19 @@ func (r *firewallResource) Delete(ctx context.Context, req resource.DeleteReques
 func (r *firewallResource) ImportState(ctx context.Context, req resource.ImportStateRequest, resp *resource.ImportStateResponse) {
 	idParts := strings.Split(req.ID, ",")
 
-	if len(idParts) != 2 || idParts[0] == "" || idParts[1] == "" {
+	if len(idParts) != 3 || idParts[0] == "" || idParts[1] == "" || idParts[2] == "" {
 		resp.Diagnostics.AddError(
 			"Unexpected Import Identifier",
-			fmt.Sprintf("Expected import identifier with format: project_id,id. Got: %q", req.ID),
+			fmt.Sprintf("Expected import identifier with format: project_id,location,name,id. Got: %q", req.ID),
 		)
 		return
 	}
 
 	resp.Diagnostics.Append(resp.State.SetAttribute(ctx, path.Root("project_id"), idParts[0])...)
-	resp.Diagnostics.Append(resp.State.SetAttribute(ctx, path.Root("id"), idParts[1])...)
+	resp.Diagnostics.Append(resp.State.SetAttribute(ctx, path.Root("location"), idParts[1])...)
+	resp.Diagnostics.Append(resp.State.SetAttribute(ctx, path.Root("name"), idParts[2])...)
 }
 
 func firewallResourceLogIdentifier(state *resource_firewall.FirewallModel) string {
-	return fmt.Sprintf("project_id=%s, firewall_id=%s", state.ProjectId.ValueString(), state.Id.ValueString())
+	return fmt.Sprintf("project_id=%s, location=%s, name=%s", state.ProjectId.ValueString(), state.Location.ValueString(), state.Name.ValueString())
 }
